[metadata]
name = repo_link
version = 0.1
author = Tomer Keren
author_email = tomer.keren.dev@gmail.com
description = Open github links in your editor
long_description=file: README.md 
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Environment :: Console
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
url = https://github.com/Tadaboody/repo_link

[options]
packages =find:
install_requires =
    gitpython 


[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts =
    repo_link=repo_link:main

[tool:pytest]
mccabe-complexity = 6
addopts = --cov-report=term-missing --cov-config=./setup.cfg --cov-report=xml:coverage.xml -v

[flake8]
ignore = W503
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
    __init__.py,
    venv
max-complexity = 10
max-line-length = 90

[coverage:run]
branch = True
omit =
    server/database/schema_generator.py
    server/social/social_net.py

[coverage:path]
source =
    server/

[coverage:report]
exclude_lines =
    pragma: no cover
   
    def __repr__
    if self\.debug
   
    raise AssertionError
    raise NotImplementedError
    pass
   
    if 0:
    if __name__ == .__main__.:
   
    import
sort = Cover
ignore_errors = True
skip_covered = True

[coverage:html]
directory = coverage_html_report

[coverage:xml]
output = cov.xml
